--- a/01_basics/index.html
+++ b/01_basics/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <h1 style="color: blueviolet;">Paragraphs & Topic Sentences</h1>
+    <h1 style="color: blueviolet;">Paragraphs a & Topic Sentences</h1>
     <h2 class="browntext "> Paragraphs & Topic Sentences</h2>
     <p>A paragraph is a series of sentences that are organized and coherent, and are all related to a single topic. Almost every piece of writing you do that is longer than a few sentences should be organized into paragraphs. This is because paragraphs show a reader where the subdivisions of an essay begin and end, and thus help the reader see the organization of the essay and grasp its main points.
 hhh
