--- a/01_basics/index.html
+++ b/01_basics/index.html
@@ -10,6 +10,7 @@
             color:seagreen ;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 style="color: blueviolet;">Paragraphs a & Topic Sentences</h1>
