--- a/01_basics/02_login_project/login.html
+++ b/01_basics/02_login_project/login.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page </title>
+    <style>
+        body{
+            background-color: #1a1a1a;
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        
+        }
+        
+    </style>
 </head>
 <body>
     <div class="card"> 
