--- a/01_basics/Assignment/signup.html
+++ b/01_basics/Assignment/signup.html
@@ -57,7 +57,7 @@
     <div class="card"> 
         
         <form >
-            <input type="emailds" name="" id="" placeholder="Email">
+            <input type="email" name="" id="" placeholder="Email">
             <input type="first name" name="" id="" placeholder="First name">  <input type="last name" name="" id="" placeholder="Last name">
             <input type="password" name="" id="" placeholder="Password">
          <button type="submit"> Sign Up </button>
